# E-minor-engine

./: .gitignore  CMakeLists.txt  README.md
include/: Shader.h  Zader.h  camera.h  engine.h  renderer.h  resource_manager.h  shader.h
res/shaders/: basic_lighting.frag  basic_lighting.vs  new_light.frag  transform.frag  transform.vs  vignette.frag  vignette.vs
src/: CMakeLists.txt  engine.cpp  engine.h  main.cpp  program.cpp  renderer.cpp  renderer.h  resource_manager.cpp  texture.cpp  texture.h
website/: index.html  milestone.html  proposal.html
